# Intan-RHX

./: .gitignore  .prettierrc  CMakeLists.txt  IntanRHX.pro  IntanRHX.qrc  README.md  XDAQ-RHX.rc  conanfile.txt  main.cpp
.github/workflows/: build.yml
Engine/: CMakeLists.txt
Engine/API/Abstract/: abstractrhxcontroller.cpp  abstractrhxcontroller.h
Engine/API/Hardware/: controller_info.cpp  controller_info.h  rhxcontroller.cpp  rhxcontroller.h  rhxdatablock.cpp  rhxdatablock.h  rhxglobals.h
Engine/API/Synthetic/: playbackrhxcontroller.cpp  playbackrhxcontroller.h  synthdatablockgenerator.cpp  syntheticrhxcontroller.cpp  syntheticrhxcontroller.h
Engine/Processing/: controllerinterface.cpp  controllerinterface.h  datastreamfifo.cpp  datastreamfifo.h  rhxdatareader.cpp  rhxdatareader.h  signalsources.cpp  systemstate.cpp  systemstate.h  waveformfifo.cpp  waveformfifo.h  xmlinterface.cpp
Engine/Processing/DataFileReaders/: datafilemanager.cpp  datafilereader.cpp  fileperchannelmanager.cpp  traditionalintanfilemanager.cpp
Engine/Processing/SaveManagers/: fileperchannelsavemanager.cpp  filepersignaltypesavemanager.cpp  intanfilesavemanager.cpp
Engine/Processing/XPUInterfaces/: abstractxpuinterface.cpp  abstractxpuinterface.h  cpuinterface.cpp  gpuinterface.cpp  xpucontroller.cpp  xpucontroller.h
Engine/Threads/: usbdatathread.cpp  usbdatathread.h  waveformprocessorthread.cpp
FPGA-bitfiles/: XDAQRHD.bit  XDAQRHS.bit
GUI/: CMakeLists.txt
GUI/Dialogs/: boardselectdialog.cpp  boardselectdialog.h  demodialog.cpp
GUI/Widgets/: controlpanel.cpp  controlpanel.h  controlpanelKONTEXtab.cpp  controlpanelKONTEXtab.h  multicolumndisplay.cpp  multicolumndisplay.h  multiwaveformplot.cpp  waveformdisplaymanager.cpp  waveformdisplaymanager.h
GUI/Windows/: controlwindow.cpp
cmake/: FindOpenCL.cmake  FindokFrontPanel.cmake  deployQt.cmake
